# ATLAS-sim

./: .gitignore  README.md  docker-compose.yml
atlas/: __init__.py
atlas/model/: __init__.py  enums.py  geo_coordinate.py  vector3d.py  waypoint.py
atlas/uav/: __init__.py  collision_avoider.py  emergency_handler.py  navigation_controller.py  uav_agent.py
atlas/uav/strategy/: __init__.py  i_avoidance_strategy.py
docker/ros/: Dockerfile  entrypoint.sh  start_sim.sh  start_vnc_gazebo.sh
docs/: final_report_simulation.md
ros_ws/src/: demo_script.py  test_integration.py
ros_ws/src/atlas_commandcenter/: package.xml  setup.cfg  setup.py
ros_ws/src/atlas_commandcenter/atlas_commandcenter/: __init__.py  alert_display.py  command_center_interface.py  mission_controller.py
ros_ws/src/atlas_commandcenter/test/: test_final_integration_flow.py  test_integration_smoke.py
ros_ws/src/atlas_common/: __init__.py  package.xml  setup.cfg  setup.py
ros_ws/src/atlas_common/atlas_common/: __init__.py  enums.py  geo_coordinate.py  vector3d.py  waypoint.py
ros_ws/src/atlas_communication/: communication_bus.py  message_router.py  package.xml  setup.cfg  setup.py  telemetry_packet.py
ros_ws/src/atlas_communication/atlas_communication/: __init__.py  communication_bus.py  message_router.py  network_simulator.py  telemetry_packet.py
ros_ws/src/atlas_data/: package.xml  setup.cfg  setup.py
ros_ws/src/atlas_data/atlas_data/: __init__.py  data_logger.py  mission_plan.py  mission_replayer.py
ros_ws/src/atlas_ros_bridge/: package.xml  setup.cfg  setup.py
ros_ws/src/atlas_ros_bridge/atlas_ros_bridge/: __init__.py  bridge_utils.py  commandcenter_bridge_node.py  demo_dashboard_node.py  demo_mission_state_node.py  demo_threat_event_node.py  qgc_mavlink_bridge_node.py  simulation_bridge_node.py  vision_node.py
ros_ws/src/atlas_ros_bridge/launch/: atlas_final_demo.launch.py  atlas_gazebo_demo.launch.py  atlas_qgc_demo.launch.py  atlas_sim_bridge.launch.py  atlas_vision_bridge.launch.py
ros_ws/src/atlas_ros_bridge/worlds/: atlas_demo_world.sdf
ros_ws/src/atlas_simulation/: package.xml  setup.cfg  setup.py
ros_ws/src/atlas_simulation/atlas_simulation/: __init__.py  affiliation_scorer.py  demo_runner.py  demo_scenario.py  environment_model.py  models.py  physics_processor.py  publisher_adapter.py  simulation_engine.py  vision_demo_config.py  vision_threat_assessor.py
ros_ws/src/atlas_simulation/missions/: mission_demo.json  rectangular_patrol_3uav.json
ros_ws/src/atlas_simulation/resource/: atlas_simulation
ros_ws/src/atlas_simulation/test/: test_simulation_engine.py  test_world_state_bus_bridge.py
ros_ws/src/atlas_swarm/: package.xml  setup.cfg  setup.py
ros_ws/src/atlas_swarm/atlas_swarm/: __init__.py  formation_manager.py  formation_transitions.py  models.py  swarm_coordinator.py
ros_ws/src/atlas_swarm/test/: test_swarm_command_adapter.py  test_swarm_command_bus_binding.py
ros_ws/src/atlas_threat/: __init__.py  package.xml  sensor_simulator.py  setup.cfg  setup.py  sim_engine_stub.py  threat_alert.py  threat_detector.py
ros_ws/src/atlas_threat/atlas_threat/: __init__.py  affiliation_scorer.py  aruco_identifier.py  sensor_simulator.py  swarm_affiliation_handler.py  threat_alert.py  threat_detector.py  threat_visualizer.py  vision_bridge.py  vision_threat_assessor.py  yolo_detector.py
ros_ws/src/atlas_uav/: package.xml  setup.cfg  setup.py
ros_ws/src/atlas_uav/atlas_uav/: __init__.py  collision_avoider.py  emergency_handler.py  navigation_controller.py  uav_agent.py
ros_ws/src/atlas_uav/atlas_uav/strategy/: __init__.py  i_avoidance_strategy.py
ros_ws/src/atlas_uav/test/: test_navigation_waypoint_compatibility.py
simulation/src/simple_drone_control/: package.xml  setup.py
simulation/src/simple_drone_control/simple_drone_control/: controller.py
simulation/src/simulation_env/: package.xml  setup.cfg  setup.py
simulation/src/simulation_env/worlds/: simple_world.world
src/atlas/atlas_communication/: command_center_stub.py  communication_bus.py  message_router.py  network_simulator.py  telemetry_packet.py
src/atlas/atlas_threat/: threat_alert.py  threat_detector.py
(+2 files in other folders)
