<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlas_ros_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge package for ATLAS simulation, telemetry, command-center, and vision integration.</description>
  <maintainer email="atlas@example.com">ATLAS Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- ATLAS bridge runtime dependencies -->
  <exec_depend>atlas_commandcenter</exec_depend>
  <exec_depend>atlas_simulation</exec_depend>
  <exec_depend>atlas_threat</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
