<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlas_swarm</name>
  <version>0.1.0</version>
  <description>SwarmCoordinator, FormationManager, and swarm messaging models for the ATLAS project.</description>
  <maintainer email="zeynep.selcuk03@gmail.com">zeynepselcuk03</maintainer>
  <license>MIT</license>

  <depend>atlas_common</depend>
  <depend>atlas_uav</depend>
  <depend>atlas_threat</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
